misc: Revert to git-gateway

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,5 @@
 backend:
-  name: github
-  repo: ziurj-web/jar-webforge
+  name: git-gateway
   branch: main
 # Media folder name can change to include portfoilio items as well.
 media_folder: "public/assets/blog"
